bugfix: align label to icon in dropdown-buttons

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -183,7 +183,7 @@ a.lms-ui-link-button + button.lms-ui-button {
   }
   @media screen and (max-width: 1200px) {
     .lms-ui-dropdown-toggle {
-      display: inline-block !important;
+      display: inline-flex !important;
       &.secondary {
         display: none !important;
       }
